--- a/AInew.html
+++ b/AInew.html
@@ -314,7 +314,7 @@
             font-size: 1.1em;
             width: 100%;
             text-align: left;
-            background-color: #e5effa;
+            background-color: white;
             color: black;
             border: 1px solid #738bf8;
             cursor: pointer;
