--- a/AInew.html
+++ b/AInew.html
@@ -316,9 +316,9 @@
             text-align: left;
             background-color: white;
             color: black;
-            border: 1px solid #738bf8;
+            border: 1px solid rgba(128, 128, 128, 0.5); /* 将边框颜色修改为灰色，这里使用 rgba 颜色值表示 50%透明度的灰色 */;
             cursor: pointer;
-            border-radius: 30px;
+            border-radius: 6px;
             transition: background-color 0.3s, border-color 0.3s;
         }
         .ai-intro-container button:hover {
